--- a/Backend/EmployeeProjBackend/EmployeeProjBackend/appsettings.json
+++ b/Backend/EmployeeProjBackend/EmployeeProjBackend/appsettings.json
@@ -6,7 +6,10 @@
   },
   "ApplicationSettings": {
     "Jwt_Secret": "Jwt_Secrey_Key1038489543",
-    "Client_URL": "http://localhost:4200"
+    "Client_URL": "http://localhost:4200",
+    "UserName": "admin",
+    "UserPassword": "adminsecret",
+    "GuidID": "98576ae9-320a-4b1a-97de-391cdd5f15e5"
   },
   "AllowedHosts": "*"
 }
